test/kobra-code/syntax-errors/badly-formed-numbers.ks
$ a = 10,
  b = 10.0,
  c = 10e54,
  d = 10.0.0,
  x = 10.0eE0,
  y = -1.102.1
